# dummy_lib

./: CMakeLists.txt  README.md  dummy.cpp
include/: dummy.h
src/: dummy.cpp
